--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -58,14 +58,14 @@ font-feature-settings:'liga';
 body {background:#eee url('../../resources/images/common/top_bg.png') no-repeat 50% 0;}
 .base-skip {position:fixed;z-index:100;}
 .base-layer {position:relative;z-index:20;}
-.base-wrap {position:relative;width:100%;height:100%;z-index:0;-webkit-overflow-scrolling:touch;}
+.base-wrap {position:relative;width:100%;height:100%;z-index:0;-webkit-overflow-scrolling:touch; padding-top:140px;}
 .base-main {width:100%;}
 .base-body-a {width:100%;}
 .base-footer {width:100%;background:url('../../resources/images/common/footer_bg.png') no-repeat 50% 0;height:460px}
 .base-footer.type-b {background-image:url("../../resources/images/common/footer_bg_b.png")}
 
 /* base header */
-.base-header {width:100%;max-width:1640px;margin:0 auto;padding:55px 20px 20px;}
+.base-header {width:100%;max-width:1640px;margin:0 auto;padding:55px 20px 20px; position:fixed; top:0; left:50%; transform: translate(-50%, 0); z-index:10;}
 .base-header::after{content:""; display:block; clear:both;}
 .header-area{position:relative}
 .logo-tera {display:block;float:left;}
@@ -76,7 +76,7 @@ body {background:#eee url('../../resources/images/common/top_bg.png') no-repeat 
 
 .goldkey{position: absolute; top:40px; left:-15px; z-index: 100;}
 .goldkey .key-line{display:block; position: absolute; top:0; left:27px;}
-.goldkey .key{display:block; position: absolute; top:110px; left:10px; width:39px; height:67px; transform-origin:50%; transform:rotateY(0deg); transition: transform .3s ease-out; background: url(../../resources/images/common/key2.png) no-repeat 0 0;}
+.goldkey .key{display:block; position: absolute; top:110px; left:10px; width:45px; height:67px; transform-origin:50%; transform:rotateY(0deg); transition: transform .3s ease-out; background: url(../../resources/images/common/key2.png) no-repeat 0 0;}
 .goldkey .key:hover{transform:rotateY(360deg);}
 /* .goldkey .key:hover{animation-name:fadeInTop; animation-duration:.8s; animation-iteration-count:1; animation-timing-function:ease-out; animation-fill-mode: forwards;}
 @keyframes keyani {
